--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 <button id="checkManyBtn">Check Keys</button>
             </div>
             <div id="multiResult" class="result muted">No batch check run yet.</div>
+            <div class="hint" style="text-align:center; margin-top:14px;">
+                Project on GitHub:
+                <a class="repo-link" href="https://github.com/vikky2810/GeminiAPItest" target="_blank" rel="noopener noreferrer">
+                    <svg aria-hidden="true" viewBox="0 0 16 16" width="16" height="16">
+                        <path d="M8 .198a8 8 0 0 0-2.53 15.6c.4.074.547-.174.547-.387 0-.19-.007-.693-.01-1.36-2.226.484-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.727-.497.055-.487.055-.487.804.056 1.228.826 1.228.826.715 1.225 1.875.871 2.332.666.073-.518.28-.87.508-1.07-1.776-.202-3.644-.888-3.644-3.952 0-.873.312-1.587.824-2.147-.083-.203-.357-1.018.078-2.122 0 0 .67-.214 2.2.82A7.662 7.662 0 0 1 8 3.868c.68.003 1.365.092 2.005.27 1.53-1.034 2.2-.82 2.2-.82.436 1.104.162 1.919.08 2.122.513.56.823 1.274.823 2.147 0 3.07-1.871 3.748-3.652 3.947.288.248.543.736.543 1.484 0 1.07-.01 1.933-.01 2.197 0 .215.146.464.55.385A8 8 0 0 0 8 .198Z"></path>
+                    </svg>
+                    github.com/vikky2810/GeminiAPItest
+                </a>
+            </div>
         </div>
     </div>
 
