--- a/index.html
+++ b/index.html
@@ -1,57 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gemini API Key Checker</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gemini API key Tester</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrap">
-        <div class="card">
-            <h1 class="title">Gemini API Key Checker</h1>
-            <p class="subtitle">Check your Google Gemini API key quickly.</p>
-            <div class="mode-toggle" role="tablist" aria-label="Mode">
-                <button id="singleTab" class="mode active" role="tab" aria-selected="true">Single</button>
-                <button id="multiTab" class="mode" role="tab" aria-selected="false">Multiple</button>
-            </div>
-            <section id="singleSection">
-                <div class="row">
-                    <div class="field">
-                        <input id="apiKey" type="password" placeholder="Enter your API key" autocomplete="off" spellcheck="false" aria-label="API key">
-                        <button id="toggleVis" class="toggle" title="Show/Hide">
-                            <svg aria-hidden="true" viewBox="0 0 24 24" width="18" height="18">
-                                <path d="M12 5c-5.5 0-9.5 4.5-10.5 6 .99 1.5 5 6 10.5 6s9.51-4.5 10.5-6C21.5 9.5 17.5 5 12 5Zm0 10a4 4 0 1 1 0-8 4 4 0 0 1 0 8Zm0-2.5A1.5 1.5 0 1 0 12 9a1.5 1.5 0 0 0 0 3.5Z"></path>
-                            </svg>
-                        </button>
-                    </div>
-                    <button id="checkBtn">Check Key</button>
-                </div>
-                <div id="result" class="result muted"></div>
-            </section>
-
-            <section id="multiSection" hidden>
-                <textarea id="apiKeys" placeholder="KEY_1\nKEY_2\nKEY_3"></textarea>
-                <div class="row" style="justify-content: flex-end; margin-top: 10px;">
-                    <button id="checkManyBtn">Check Keys</button>
-                </div>
-                <div id="multiResult" class="result muted"></div>
-            </section>
-            <div class="hint" style="text-align:center; margin-top:14px;">
-                <a class="repo-link" href="https://github.com/vikky2810/GeminiAPItest" target="_blank" rel="noopener noreferrer" title="GitHub Repository">
-                    <svg aria-hidden="true" viewBox="0 0 16 16" width="16" height="16">
-                        <path d="M8 .198a8 8 0 0 0-2.53 15.6c.4.074.547-.174.547-.387 0-.19-.007-.693-.01-1.36-2.226.484-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.727-.497.055-.487.055-.487.804.056 1.228.826 1.228.826.715 1.225 1.875.871 2.332.666.073-.518.28-.87.508-1.07-1.776-.202-3.644-.888-3.644-3.952 0-.873.312-1.587.824-2.147-.083-.203-.357-1.018.078-2.122 0 0 .67-.214 2.2.82A7.662 7.662 0 0 1 8 3.868c.68.003 1.365.092 2.005.27 1.53-1.034 2.2-.82 2.2-.82.436 1.104.162 1.919.08 2.122.513.56.823 1.274.823 2.147 0 3.07-1.871 3.748-3.652 3.947.288.248.543.736.543 1.484 0 1.07-.01 1.933-.01 2.197 0 .215.146.464.55.385A8 8 0 0 0 8 .198Z"></path>
-                    </svg>
-                    vikky2810/GeminiAPItest
-                </a>
-            </div>
-        </div>
+    <div class="container">
+        <h1>Gemini API key Tester</h1>
+        <form id="api-form">
+            <input type="text" id="api-key" placeholder="Enter your API key">
+            <button type="submit">Test API</button>
+        </form>
+        <div id="result"></div>
     </div>
-
-
-
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
-
-
